<resources>
    <string name="app_name">E-Commerce App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgotPass">Forgot Password</string>
    <string name="registernow">Register Now</string>
    <string name="usernamePlaceHolder">My username</string>
    <string name="passwordPlaceHolder">************</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="email">E-mail</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="rol">Rol</string>
    <string name="contact">Contact</string>
    <string name="birthday">Birthday:</string>
    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="menu_product">Product</string>
    <string name="soon">To Be Implemented</string>
    <string name="menu_help">Help</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Log Out</string>
    <string name="action_search">Search</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_cart">Cart</string>
    <string name="productname">Product Name</string>
    <string name="categoryname">Category Name</string>
    <string name="isAvailable">Is it Available?</string>
    <string name="currentstock">Current Stock</string>
    <string name="stockAvailable">Stock Available</string>
    <string name="price">Price</string>
    <string name="selectImages">Select Images</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="delete">Delete</string>
    <string name="action_manager">Manage</string>
    <string name="action_delete">Delete</string>
</resources>