<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.product.CreateProductFragment">


    <ScrollView
            android:id="@+id/productForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:scrollbarStyle="insideInset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:theme="@style/AppTheme"
            app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
                android:id="@+id/registerData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:gravity="center"
                android:orientation="vertical">

            <Button
                    android:id="@+id/select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="7sp"
                    android:text="@string/selectImages"/>

            <!--click here to view previous image-->
            <ImageSwitcher
                    android:id="@+id/images"
                    android:layout_width="180dp"
                    android:layout_height="180dp"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/previous"
                        android:text="@string/previous"
                        android:textSize="7sp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" "
                        android:textAlignment="center"
                        android:gravity="center|bottom"/>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/delete"
                        android:text="@string/delete"
                        android:textSize="7sp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" "
                        android:textAlignment="center"
                        android:gravity="center|bottom"/>

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/next"
                        android:text="@string/next"
                        android:textSize="7sp"/>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/productNameTXT" android:hint="@string/productname"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/filter_spinner_dropdown_bg"
                    app:boxBackgroundColor="@color/colorOnPrimary"
                    android:hint="@string/menu_category">

                <AutoCompleteTextView
                        android:id="@+id/categorySpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:inputType="none"
                        tools:ignore="LabelFor"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/priceTXT" android:hint="@string/price"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <CheckBox android:id="@+id/availableCheck"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/isAvailable"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/stockAvailableTXT" android:hint="@string/stockAvailable"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/registerProductBTN"
                        android:text="@string/register"
                        android:textSize="15sp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>