<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:scrollbarStyle="insideInset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:theme="@style/AppTheme"
            app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
                android:id="@+id/credentials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:gravity="center"
                android:orientation="vertical">

            <TextView
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="40sp"
                    android:id="@+id/appName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_marginBottom="20dp"
                    android:layout_centerHorizontal="true"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/mailInput" android:hint="@string/email"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/passwordInput" android:hint="@string/password"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/loginBTN"
                        android:text="@string/login"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/forgotPassTXT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgotPass" android:textColor="@color/colorPrimary"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="|"
                        android:textStyle="bold"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>
                <TextView
                        android:id="@+id/registerTXT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/registernow" android:textColor="@color/colorPrimary"/>


            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>