<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
            android:id="@+id/registerForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:scrollbarStyle="insideInset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:theme="@style/AppTheme"
            app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
                android:id="@+id/registerData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:gravity="center"
                android:orientation="vertical">


            <TextView
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="40sp"
                    android:id="@+id/appName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_marginBottom="20dp"
                    android:layout_centerHorizontal="true"/>

            <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/profile"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:src="@drawable/ic_person_default"
                    app:civ_border_color="@color/colorWhiteDark"
                    app:civ_border_width="4dp"
                    app:civ_shadow="true"
                    app:civ_shadow_radius="10dp"
                    app:civ_shadow_color="@color/colorWhiteDark"/>
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/firstnameTXT" android:hint="@string/firstname"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/lastnameTXT" android:hint="@string/lastname"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/emailTXT" android:hint="@string/email"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/passwordTXT" android:hint="@string/password"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/confirmPassTXT" android:hint="@string/confirmPass"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/filter_spinner_dropdown_bg"
                    app:boxBackgroundColor="@color/colorOnPrimary"
                    android:hint="@string/rol">

                <AutoCompleteTextView
                        android:id="@+id/rolSPINNER"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:inputType="none"
                        tools:ignore="LabelFor"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/contactTXT" android:hint="@string/contact"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/birthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/birthLabel" android:textSize="20sp"
                        android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>
            <DatePicker
                    android:id="@+id/birthdayDATE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birthday"
                    android:background="@color/colorOnPrimary"
                    android:inputType="date"
                    android:layout_centerHorizontal="true"
                    android:datePickerMode="spinner"
                    android:calendarViewShown="false"
                    android:singleLine="true"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/register"
                        android:text="@string/register"
                        android:textSize="15sp"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>