<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.category.CreateCategoryFragment">

    <ScrollView
            android:id="@+id/categoryForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:scrollbarStyle="insideInset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:theme="@style/AppTheme"
            app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
                android:id="@+id/registerData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:gravity="center"
                android:orientation="vertical">

            <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/image"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:src="@drawable/ic_person_default"
                    app:civ_border_color="@color/colorWhiteDark"
                    app:civ_border_width="4dp"
                    app:civ_shadow="true"
                    app:civ_shadow_radius="10dp"
                    app:civ_shadow_color="@color/colorWhiteDark"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/categorynameTXT" android:hint="@string/categoryname"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <CheckBox android:id="@+id/availableCheckCat"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/isAvailable"/>
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/registerCatBTN"
                        android:text="@string/register"
                        android:textSize="15sp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>